--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -42,6 +42,7 @@
   <string name="ApplicationPreferencesActivity_Off">Deaktiveret</string>
   <string name="ApplicationPreferencesActivity_sms_mms_summary">SMS %1$s, MMS %2$s</string>
   <string name="ApplicationPreferencesActivity_privacy_summary">Skærmlås %1$s, Registreringskode %2$s</string>
+  <string name="ApplicationPreferencesActivity_privacy_summary_screen_lock">Låseskærm %1$s</string>
   <string name="ApplicationPreferencesActivity_appearance_summary">Tema %1$s, Sprog %2$s</string>
   <!--AppProtectionPreferenceFragment-->
   <plurals name="AppProtectionPreferenceFragment_minutes">
@@ -460,6 +461,8 @@
   <string name="MediaOverviewActivity_sent_by_s_to_s">Sendt fra %1$s til %2$s</string>
   <string name="MediaOverviewActivity_sent_by_you_to_s">Sendt fra dig til %1$s</string>
   <!--Megaphones-->
+  <string name="Megaphones_introducing_reactions">Introducerer Reaktioner </string>
+  <string name="Megaphones_tap_and_hold_any_message_to_quicky_share_how_you_feel">Tap og hold på enhver besked for hurtigt at vise hvordan du føler</string>
   <string name="Megaphones_remind_me_later">Påmind mig senere</string>
   <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal opkald i gang</string>
@@ -566,7 +569,9 @@
   <string name="RatingManager_later">Senere</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Ups, det ser ud til at Play Butik ikke er installeret på din enhed</string>
   <!--ReactionsBottomSheetDialogFragment-->
+  <string name="ReactionsBottomSheetDialogFragment_all">Alle %1$d</string>
   <!--ReactionsConversationView-->
+  <string name="ReactionsConversationView_plus">+%1$d</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Blokér kontakten?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Du vil ikke længere modtage beskeder eller opkald fra kontakten</string>
@@ -1434,6 +1439,8 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="ConfirmKbsPinFragment__pin_creation_failed">Fejl ved oprettelse af PIN</string>
   <string name="ConfirmKbsPinFragment__your_pin_was_not_saved">PIN koden blev ikke gemt. Du bliver bedt om at oprette en PIN kode senere</string>
   <string name="ConfirmKbsPinFragment__pin_created">PIN oprettet</string>
+  <string name="ConfirmKbsPinFragment__re_enter_pin">Skriv PIN igen</string>
+  <string name="ConfirmKbsPinFragment__creating_pin">Opretter PIN…</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">Introducerer PIN´s</string>
   <string name="KbsSplashFragment__learn_more">Lær mere</string>
@@ -1450,7 +1457,6 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="KbsReminderDialog__incorrect_pin_try_again">Forkert PIN. Prøv igen</string>
   <!--AccountLockedFragment-->
   <string name="AccountLockedFragment__account_locked">Konto låst</string>
-  <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">Din konto er blevet låst for at beskytte dit privatliv og din sikkerhed. Efter %1$d dages inaktivitet på din konto, vil du kunne genregistrere dette mobilnummer uden brug af PIN. Alt indhold vil blive slettet</string>
   <string name="AccountLockedFragment__next">Næste</string>
   <string name="AccountLockedFragment__learn_more">Lær mere</string>
   <!--KbsLockFragment-->
@@ -1463,7 +1469,11 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="RegistrationLockFragment__forgot_pin">Glemt PIN?</string>
   <string name="RegistrationLockFragment__incorrect_pin">Forkert PIN</string>
   <string name="RegistrationLockFragment__forgot_your_pin">Glemt din PIN?</string>
+  <string name="RegistrationLockFragment__not_many_tries_left">Ikke mange forsøg tilbage!</string>
   <!--KBS Megaphone-->
+  <string name="KbsMegaphone__create_a_pin">Opret en PIN</string>
+  <string name="KbsMegaphone__pins_add_another_layer_of_security_to_your_signal_account">PINs tilføjer et ekstra lag af sikkerhed til din Signal konto</string>
+  <string name="KbsMegaphone__create_pin">Opret PIN</string>
   <string name="KbsMegaphone__introducing_pins">Introducerer PIN´s</string>
   <string name="KbsMegaphone__update_pin">Opdatér PIN</string>
   <!--transport_selection_list_item-->
