--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -42,6 +42,7 @@
   <string name="ApplicationPreferencesActivity_Off">Inactivo</string>
   <string name="ApplicationPreferencesActivity_sms_mms_summary">SMS %1$s, MMS %2$s</string>
   <string name="ApplicationPreferencesActivity_privacy_summary">Bloqueo de pantalla %1$s, Bloqueo de registro %2$s</string>
+  <string name="ApplicationPreferencesActivity_privacy_summary_screen_lock">Bloqueo de pantalla %1$s</string>
   <string name="ApplicationPreferencesActivity_appearance_summary">Tema %1$s, Idioma %2$s</string>
   <!--AppProtectionPreferenceFragment-->
   <plurals name="AppProtectionPreferenceFragment_minutes">
@@ -60,6 +61,8 @@
   <string name="AttachmentKeyboard_file">Archivo</string>
   <string name="AttachmentKeyboard_contact">Contacto</string>
   <string name="AttachmentKeyboard_location">Posición</string>
+  <string name="AttachmentKeyboard_Signal_needs_permission_to_show_your_photos_and_videos">Signal necesita acceso para mostrar tus fotos y vídeos.</string>
+  <string name="AttachmentKeyboard_give_access">Permitir acceso</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">No se pudo encontrar una aplicación para el contenido seleccionado.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal necesita acceso al almacenamiento de tu teléfono para adjuntar fotos, vídeos o audio. Por favor, ve a la aplicación «Ajustes», selecciona Signal en el menú «Aplicaciones y notificaciones» y en «Permisos» activa «Almacenamiento».</string>
@@ -67,7 +70,7 @@
   <string name="AttachmentManager_signal_requires_location_information_in_order_to_attach_a_location">Signal necesita acceso a tu posición para adjuntar la información en tus chats. Por favor, ve a la aplicación «Ajustes», selecciona Signal en el menú «Aplicaciones y notificaciones» y en «Permisos» activa «Ubicación».</string>
   <string name="AttachmentManager_signal_requires_the_camera_permission_in_order_to_take_photos_but_it_has_been_permanently_denied">Signal necesita acceso a la cámara para tomar fotos y verificar las cifras de seguridad de tus chats. Por favor, ve a la aplicación «Ajustes», selecciona Signal en el menú «Aplicaciones y notificaciones» y en «Permisos» activa «Cámara».</string>
   <!--AttachmentUploadJob-->
-  <string name="AttachmentUploadJob_uploading_media">Cargando archivo multimedia …</string>
+  <string name="AttachmentUploadJob_uploading_media">Transfiriendo archivo multimedia …</string>
   <string name="AttachmentUploadJob_compressing_video_start">Comprimiendo vídeo …</string>
   <!--AudioSlidePlayer-->
   <string name="AudioSlidePlayer_error_playing_audio">¡Fallo al reproducir sonido!</string>
@@ -215,7 +218,7 @@
     <item quantity="one">Esto eliminará de forma permanente el mensaje seleccionado.</item>
     <item quantity="other">Esto eliminará de forma permanente los %1$d mensajes seleccionados.</item>
   </plurals>
-  <string name="ConversationFragment_save_to_sd_card">¿Guardar en el almacenamiento?</string>
+  <string name="ConversationFragment_save_to_sd_card">¿Guardar?</string>
   <plurals name="ConversationFragment_saving_n_media_to_storage_warning">
     <item quantity="one">Guardar este archivo multimedia en el almacenamiento del teléfono permitirá que cualquier otra aplicación en tu dispositivo acceda a él.\n\n¿Continuar?</item>
     <item quantity="other">Guardar los %1$d archivos multimedia en el almacenamiento del teléfono permitirá que cualquier otra aplicación en tu dispositivo acceda a ellos.\n\n¿Continuar?</item>
@@ -460,6 +463,7 @@
   <string name="MediaOverviewActivity_sent_by_you_to_s">Enviado por ti a %1$s</string>
   <!--Megaphones-->
   <string name="Megaphones_introducing_reactions">Las reacciones a mensajes han llegado</string>
+  <string name="Megaphones_tap_and_hold_any_message_to_quicky_share_how_you_feel">Mantén pulsado un mensaje para mostrar cómo te sientes.</string>
   <string name="Megaphones_remind_me_later">Recordar más tarde</string>
   <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Llamada de Signal en curso</string>
@@ -566,7 +570,9 @@
   <string name="RatingManager_later">Más tarde</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Vaya, la aplicación de la Play Store no parece estar instalada.</string>
   <!--ReactionsBottomSheetDialogFragment-->
+  <string name="ReactionsBottomSheetDialogFragment_all">Todo %1$d</string>
   <!--ReactionsConversationView-->
+  <string name="ReactionsConversationView_plus">+%1$d</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">¿Bloquear este contacto?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Ya no recibirás mensajes y llamadas de este contacto.</string>
@@ -1029,7 +1035,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="log_submit_activity__button_compose_email">Redactar correo</string>
   <string name="log_submit_activity__this_log_will_be_posted_online">Como este informe se hará público para que los colaboradores lo lean, puede que lo quieras examinar y editar antes de mandarlo.</string>
   <string name="log_submit_activity__loading_logs">Cargando registros …</string>
-  <string name="log_submit_activity__uploading_logs">Subiendo registros …</string>
+  <string name="log_submit_activity__uploading_logs">Transfiriendo registro (logs) …</string>
   <string name="log_submit_activity__success">¡Completado!</string>
   <string name="log_submit_activity__copy_this_url_and_add_it_to_your_issue">Copia esta URL y añádela a tu incidencia o correo de soporte:\n\n<b>%1$s</b>\n</string>
   <string name="log_submit_activity__copied_to_clipboard">Copiado al portapapeles</string>
@@ -1182,7 +1188,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="preferences__change_passphrase">Cambiar clave de acceso</string>
   <string name="preferences__change_your_passphrase">Cambia tu clave de acceso</string>
   <string name="preferences__enable_passphrase">Activa bloqueo de pantalla con clave de acceso</string>
-  <string name="preferences__lock_signal_and_message_notifications_with_a_passphrase">Bloquea pantalla y notificaciones con clave de acceso</string>
+  <string name="preferences__lock_signal_and_message_notifications_with_a_passphrase">Bloquea la pantalla y notificaciones con una clave de acceso</string>
   <string name="preferences__screen_security">Seguridad de pantalla</string>
   <string name="preferences__disable_screen_security_to_allow_screen_shots">Bloquea capturas de pantalla de signal en la lista de aplicaciones recientes y dentro de la aplicación</string>
   <string name="preferences__auto_lock_signal_after_a_specified_time_interval_of_inactivity">Bloquea automáticamente Signal tras un intervalo de inactividad especificado</string>
@@ -1428,8 +1434,21 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="BaseKbsPinFragment__create_alphanumeric_pin">Crear PIN alfanumérico</string>
   <string name="BaseKbsPinFragment__create_numeric_pin">Crear PIN numérico</string>
   <!--CreateKbsPinFragment-->
+  <plurals name="CreateKbsPinFragment__pin_must_be_at_least_characters">
+    <item quantity="one">El PIN debe constar de al menos %1$d caracter</item>
+    <item quantity="other">El PIN debe constar de al menos %1$d caracteres</item>
+  </plurals>
+  <plurals name="CreateKbsPinFragment__pin_must_be_at_least_digits">
+    <item quantity="one">El PIN debe constar al menos de %1$d cifra</item>
+    <item quantity="other">El PIN debe constar al menos de %1$d cifras</item>
+  </plurals>
   <string name="CreateKbsPinFragment__create_a_new_pin">Crear nuevo PIN</string>
+  <plurals name="CreateKbsPinFragment__you_can_choose_a_new_pin_because_this_device_is_registered">
+    <item quantity="one">Es posible seleccionar un nuevo PIN porque este dispositivo aún está registrado. Si olvidas tu PIN, tendrás que esperar %1$d día para volver a registrarte.</item>
+    <item quantity="other">Es posible seleccionar un nuevo PIN porque este dispositivo aún está registrado. Si olvidas tu PIN, tendrás que esperar %1$d días para volver a registrarte.</item>
+  </plurals>
   <string name="CreateKbsPinFragment__create_your_pin">Crea tu PIN</string>
+  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">El PIN añade una capa extra de seguridad a tu cuenta. Anota tu PIN y mantenlo en un lugar seguro. No se puede recuperar.</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">El PIN no coincide. Inténtalo de nuevo.</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">Confirma el número PIN.</string>
@@ -1437,9 +1456,12 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="ConfirmKbsPinFragment__your_pin_was_not_saved">Tu PIN no se ha guardado. Volveremos a preguntarte para crear el PIN más tarde.</string>
   <string name="ConfirmKbsPinFragment__pin_created">PIN creado.</string>
   <string name="ConfirmKbsPinFragment__re_enter_pin">Vuelve a introducir el PIN</string>
+  <string name="ConfirmKbsPinFragment__creating_pin">Creando PIN …</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">¡El PIN ha llegado!</string>
+  <string name="KbsSplashFragment__pins_add_another_level_of_security_to_your_account">El PIN añade otro nivel de seguridad a tu cuenta. Crea ahora tu PIN.</string>
   <string name="KbsSplashFragment__learn_more">Saber más</string>
+  <string name="KbsSplashFragment__learn_more_link">https://support.signal.org/hc/es/articles/360007059792-Registration-Lock</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">Bloqueo de registro = PIN</string>
   <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">El bloqueo de registro ahora se llama PIN, y permite más funciones. Actualiza ahora.</string>
   <string name="KbsSplashFragment__read_more_about_pins">Saber más sobre el PIN.</string>
@@ -1454,9 +1476,10 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="KbsReminderDialog__incorrect_pin_try_again">PIN incorrecto. Inténtalo de nuevo.</string>
   <!--AccountLockedFragment-->
   <string name="AccountLockedFragment__account_locked">Cuenta bloqueada</string>
-  <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">Tu cuenta ha sido bloqueada para proteger tu privacidad y seguridad. Después de %1$d días de inactividad en tu cuenta, podrás volver a registrar este número de teléfono sin necesidad de tu PIN. Se borrará todo el contenido de tu cuenta.</string>
+  <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">Tu cuenta ha sido bloqueada para proteger tu privacidad y seguridad. Después de %1$d días con tu cuenta inactiva, podrás volver a registrar este número de teléfono sin necesidad de tu PIN. Se borrará todo el contenido de tu cuenta.</string>
   <string name="AccountLockedFragment__next">Siguiente</string>
   <string name="AccountLockedFragment__learn_more">Saber más</string>
+  <string name="AccountLockedFragment__learn_more_url">https://support.signal.org/hc/es/articles/360007059792-Registration-Lock</string>
   <!--KbsLockFragment-->
   <string name="RegistrationLockFragment__enter_your_pin">Introduce tu PIN</string>
   <string name="RegistrationLockFragment__enter_the_pin_you_created">Introduce el PIN que has seleccionado al crear tu cuenta de Signal. El PIN es diferente al del SMS de verificación.</string>
@@ -1466,7 +1489,28 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="RegistrationLockFragment__incorrect_pin_try_again">PIN incorrecto. Inténtalo de nuevo.</string>
   <string name="RegistrationLockFragment__forgot_pin">¿No recuerdas el PIN?</string>
   <string name="RegistrationLockFragment__incorrect_pin">PIN incorrecto</string>
-  <string name="RegistrationLockFragment__forgot_your_pin">¿Has olvidado el PIN?</string>
+  <string name="RegistrationLockFragment__forgot_your_pin">¿Has olvidado tu PIN?</string>
+  <string name="RegistrationLockFragment__not_many_tries_left">No que quedan muchos intentos …</string>
+  <plurals name="RegistrationLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">
+    <item quantity="one">Para proteger tu privacidad y seguridad, no hay manera de recuperar tu PIN. Si no lo puedes recordar, podrás verificar por SMS tras %1$d días con tu cuenta inactiva. En este caso, tu cuenta se borrará junto con todo su contenido.</item>
+    <item quantity="other">Para proteger tu privacidad y seguridad, no hay manera de recuperar tu PIN. Si no lo puedes recordar, podrás verificar por SMS tras %1$d días con tu cuenta inactiva. En este caso, tu cuenta se borrará junto con todo su contenido.</item>
+  </plurals>
+  <plurals name="RegistrationLockFragment__incorrect_pin_d_attempts_remaining">
+    <item quantity="one">PIN incorrecto. Te queda %1$d intento.</item>
+    <item quantity="other">PIN incorrecto. Te quedan %1$d intentos.</item>
+  </plurals>
+  <plurals name="RegistrationLockFragment__if_you_run_out_of_attempts_your_account_will_be_locked_for_d_days">
+    <item quantity="one">Si superas el número de intentos, tu cuenta quedará bloqueada por %1$d día. Después de %1$d día con tu cuenta inactiva, podrás volver a registrarte sin tu PIN. Todo el contenido de tu cuenta se eliminará.</item>
+    <item quantity="other">Si superas el número de intentos, tu cuenta quedará bloqueada por %1$d días. Después de %1$d días con tu cuenta inactiva, podrás volver a registrarte sin tu PIN. Todo el contenido de tu cuenta se eliminará.</item>
+  </plurals>
+  <plurals name="RegistrationLockFragment__you_have_d_attempts_remaining">
+    <item quantity="one">Te queda %1$d intento.</item>
+    <item quantity="other">Te quedan %1$d intentos.</item>
+  </plurals>
+  <plurals name="RegistrationLockFragment__d_attempts_remaining">
+    <item quantity="one">%1$d intento más.</item>
+    <item quantity="other">%1$d intentos más.</item>
+  </plurals>
   <!--KBS Megaphone-->
   <string name="KbsMegaphone__create_a_pin">Crear PIN</string>
   <string name="KbsMegaphone__pins_add_another_layer_of_security_to_your_signal_account">El PIN añade otro nivel de seguridad a tu cuenta de Signal.</string>
@@ -1474,6 +1518,8 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="KbsMegaphone__introducing_pins">¡El PIN ha llegado!</string>
   <string name="KbsMegaphone__your_registration_lock_is_now_called_a_pin">Tu bloqueo de registro ahora se llama PIN, y es más seguro. Actualizar sólo lleva unos segundos.</string>
   <string name="KbsMegaphone__update_pin">Actualizar PIN</string>
+  <string name="KbsMegaphone__well_remind_you_later_creating_a_pin">Te lo volveremos a recordar. Crear tu PIN será obligatorio en %1$d días.</string>
+  <string name="KbsMegaphone__well_remind_you_later_confirming_your_pin">Te lo volveremos a recordar. Confirmar tu PIN será obligatorio en %1$d días.</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Icono de transporte</string>
   <string name="ConversationListFragment_loading">Cargando …</string>
@@ -1498,6 +1544,8 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="preferences_chats__chat_backups">Copias de seguridad de los chats</string>
   <string name="preferences_chats__backup_chats_to_external_storage">Hace una copia de seguridad de los chats en una unidad de almacenamiento externo</string>
   <string name="preferences_chats__create_backup">Crear copia de seguridad</string>
+  <string name="preferences_chats__verify_backup_passphrase">Verificar la clave de copia de seguridad</string>
+  <string name="preferences_chats__test_your_backup_passphrase_and_verify_that_it_matches">Comprueba que la clave de tu copia de seguridad es correcta</string>
   <string name="RegistrationActivity_enter_backup_passphrase">Introduce la clave de la copia de seguridad</string>
   <string name="RegistrationActivity_restore">Restaurar</string>
   <string name="RegistrationActivity_backup_failure_downgrade">No se pueden importar copias de seguridad de versiones más recientes de Signal</string>
@@ -1515,7 +1563,10 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="BackupDialog_disable_and_delete_all_local_backups">¿Desactivar y eliminar todas las copias de seguridad locales?</string>
   <string name="BackupDialog_delete_backups_statement">Eliminar copias de seguridad</string>
   <string name="BackupDialog_copied_to_clipboard">Copiado al portapapeles</string>
+  <string name="BackupDialog_enter_backup_passphrase_to_verify">Introduce la clave de la copia de seguridad para verificar</string>
   <string name="BackupDialog_verify">Verificar número</string>
+  <string name="BackupDialog_you_successfully_entered_your_backup_passphrase">La clave es correcta</string>
+  <string name="BackupDialog_passphrase_was_not_correct">La clave es incorrecta</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal necesita acceso al almacenamiento en unidades externas para crear copias de seguridad. Por favor, ve a la aplicación «Ajustes», selecciona Signal en el menú «Aplicaciones y notificaciones» y en «Permisos» activa «Almacenamiento».</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Última copia de seguridad: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">En curso</string>
@@ -1550,6 +1601,7 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="preferences_app_protection__registration_lock_pin">PIN de bloqueo de registro</string>
   <string name="preferences_app_protection__registration_lock">Bloqueo de registro</string>
   <string name="RegistrationActivity_you_must_enter_your_registration_lock_PIN">Debes introducir tu PIN de bloqueo de registro</string>
+  <string name="RegistrationActivity_your_pin_has_at_least_d_digits_or_characters">Tu PIN debe constar de al menos %d cifras o caracteres</string>
   <string name="RegistrationActivity_incorrect_registration_lock_pin">PIN de bloqueo de registro incorrecto</string>
   <string name="RegistrationActivity_too_many_attempts">Demasiados intentos</string>
   <string name="RegistrationActivity_you_have_made_too_many_incorrect_registration_lock_pin_attempts_please_try_again_in_a_day">Has realizado demasiados intentos incorrectos del PIN de bloqueo de registro. Por favor, inténtalo de nuevo pasado un día.</string>
