--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -42,6 +42,7 @@
   <string name="ApplicationPreferencesActivity_Off">Off</string>
   <string name="ApplicationPreferencesActivity_sms_mms_summary">SMS %1$s, MMS %2$s</string>
   <string name="ApplicationPreferencesActivity_privacy_summary">Blocco schermo %1$s, Sicurezza schermo %2$s</string>
+  <string name="ApplicationPreferencesActivity_privacy_summary_screen_lock">Blocco schermo %1$s</string>
   <string name="ApplicationPreferencesActivity_appearance_summary">Tema %1$s, Lingua %2$s</string>
   <!--AppProtectionPreferenceFragment-->
   <plurals name="AppProtectionPreferenceFragment_minutes">
@@ -60,6 +61,8 @@
   <string name="AttachmentKeyboard_file">File</string>
   <string name="AttachmentKeyboard_contact">Contatto</string>
   <string name="AttachmentKeyboard_location">Posizione</string>
+  <string name="AttachmentKeyboard_Signal_needs_permission_to_show_your_photos_and_videos">Signal ha bisogno dell\'autorizzazione per mostrare le tue foto e i tuoi video.</string>
+  <string name="AttachmentKeyboard_give_access">Dai l\'accesso</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">Impossibile trovare un\'app per selezionare il file.</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signal richiede l\'autorizzazione all\'accesso della memoria per allegare foto, video o audio, ma questa è stata negata in modo permanente. Si prega di aprire il menu delle impostazioni dell\'app, selezionare \"Autorizzazioni\" e abilitare \"Archiviazione\".</string>
@@ -460,6 +463,7 @@
   <string name="MediaOverviewActivity_sent_by_you_to_s">Inviato da te a %1$s</string>
   <!--Megaphones-->
   <string name="Megaphones_introducing_reactions">Ti presentiamo le reazioni</string>
+  <string name="Megaphones_tap_and_hold_any_message_to_quicky_share_how_you_feel">Tieni premuto qualsiasi messaggio per rispondere rapidamente con una reazione.</string>
   <string name="Megaphones_remind_me_later">Ricordamelo più tardi</string>
   <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Chiamata con Signal in corso</string>
@@ -566,7 +570,9 @@
   <string name="RatingManager_later">Più tardi</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">Oops, sembra che l\'app del Play Store non sia installata sul tuo dispositivo.</string>
   <!--ReactionsBottomSheetDialogFragment-->
+  <string name="ReactionsBottomSheetDialogFragment_all">Tutte %1$d</string>
   <!--ReactionsConversationView-->
+  <string name="ReactionsConversationView_plus">+%1$d</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Bloccare questo contatto?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Non riceverai più messaggi e chiamate da questo contatto.</string>
@@ -1427,8 +1433,21 @@
   <string name="BaseKbsPinFragment__create_alphanumeric_pin">Crea PIN alfanumerico</string>
   <string name="BaseKbsPinFragment__create_numeric_pin">Crea PIN numerico</string>
   <!--CreateKbsPinFragment-->
+  <plurals name="CreateKbsPinFragment__pin_must_be_at_least_characters">
+    <item quantity="one">Il PIN deve essere almeno di %1$d carattere</item>
+    <item quantity="other">Il PIN deve essere almeno di %1$d caratteri</item>
+  </plurals>
+  <plurals name="CreateKbsPinFragment__pin_must_be_at_least_digits">
+    <item quantity="one">Il PIN deve essere almeno di %1$d cifra</item>
+    <item quantity="other">Il PIN deve essere almeno di %1$d cifre</item>
+  </plurals>
   <string name="CreateKbsPinFragment__create_a_new_pin">Crea un nuovo PIN</string>
+  <plurals name="CreateKbsPinFragment__you_can_choose_a_new_pin_because_this_device_is_registered">
+    <item quantity="one">Puoi scegliere un nuovo PIN poiché questo dispositivo è registrato. Se ti dimentichi il tuo PIN, potresti dover attendere %1$d giorno per registrarti di nuovo.</item>
+    <item quantity="other">Puoi scegliere un nuovo PIN poiché questo dispositivo è registrato. Se ti dimentichi il tuo PIN, potresti dover attendere %1$d giorni per registrarti di nuovo.</item>
+  </plurals>
   <string name="CreateKbsPinFragment__create_your_pin">Crea il tuo PIN</string>
+  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">Il PIN aggiunge un ulteriore strato di sicurezza al tuo account. È importante ricordare questo PIN, poiché non può essere recuperato.</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">I PIN non corrispondono. Riprova.</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">Conferma il tuo PIN</string>
@@ -1436,9 +1455,12 @@
   <string name="ConfirmKbsPinFragment__your_pin_was_not_saved">Il tuo PIN non è stato salvato. Ti chiederemo di creare un PIN più tardi.</string>
   <string name="ConfirmKbsPinFragment__pin_created">PIN creato.</string>
   <string name="ConfirmKbsPinFragment__re_enter_pin">Reinserisci PIN</string>
+  <string name="ConfirmKbsPinFragment__creating_pin">Creazione PIN…</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">Ti presentiamo i PIN</string>
+  <string name="KbsSplashFragment__pins_add_another_level_of_security_to_your_account">I PIN aggiungono un altro livello di sicurezza al tuo account. Creane uno ora.</string>
   <string name="KbsSplashFragment__learn_more">Scopri di più</string>
+  <string name="KbsSplashFragment__learn_more_link">https://support.signal.org/hc/en-us/articles/360007059792-Registration-Lock</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">Blocco registrazione = PIN</string>
   <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">Il tuo blocco registrazione ora è chiamato PIN e fa di più. Aggiornalo ora.</string>
   <string name="KbsSplashFragment__read_more_about_pins">Scopri di più sui PIN.</string>
@@ -1456,6 +1478,7 @@
   <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">Il tuo account è stato bloccato per proteggere la tua privacy e la tua sicurezza. Dopo %1$d giorni di inattività sarai in grado di registrare nuovamente questo numero di telefono senza bisogno del tuo PIN. Tutti i contenuti saranno cancellati.</string>
   <string name="AccountLockedFragment__next">Avanti</string>
   <string name="AccountLockedFragment__learn_more">Scopri di più</string>
+  <string name="AccountLockedFragment__learn_more_url">https://support.signal.org/hc/en-us/articles/360007059792-Registration-Lock</string>
   <!--KbsLockFragment-->
   <string name="RegistrationLockFragment__enter_your_pin">Inserisci il tuo PIN</string>
   <string name="RegistrationLockFragment__enter_the_pin_you_created">Inserisci il PIN che hai creato per il tuo account. Questo è diverso dal tuo codice di verifica SMS.</string>
@@ -1466,6 +1489,27 @@
   <string name="RegistrationLockFragment__forgot_pin">PIN dimenticato?</string>
   <string name="RegistrationLockFragment__incorrect_pin">PIN errato</string>
   <string name="RegistrationLockFragment__forgot_your_pin">Hai dimenticato il tuo PIN?</string>
+  <string name="RegistrationLockFragment__not_many_tries_left">Non molti tentativi rimanenti!</string>
+  <plurals name="RegistrationLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">
+    <item quantity="one">Per la tua privacy e sicurezza, non c\'è modo di recuperare il tuo PIN. Se non riesci a ricordare il tuo PIN, puoi ripetere la verifica con SMS dopo %1$d giorno di inattività. In questo caso, il tuo account sarà cancellato e tutti i contenuti eliminati.</item>
+    <item quantity="other">Per la tua privacy e sicurezza, non c\'è modo di recuperare il tuo PIN. Se non riesci a ricordare il tuo PIN, puoi ripetere la verifica con SMS dopo %1$d giorni di inattività. In questo caso, il tuo account sarà cancellato e tutti i contenuti eliminati.</item>
+  </plurals>
+  <plurals name="RegistrationLockFragment__incorrect_pin_d_attempts_remaining">
+    <item quantity="one">PIN errato. %1$d tentativo rimanente.</item>
+    <item quantity="other">PIN errato. %1$d tentativi rimanenti.</item>
+  </plurals>
+  <plurals name="RegistrationLockFragment__if_you_run_out_of_attempts_your_account_will_be_locked_for_d_days">
+    <item quantity="one">Se esaurisci i tentativi il tuo account verrà bloccato per %1$d giorno. Dopo %1$d giorno di inattività, potrai registrarti nuovamente senza il tuo PIN. Il tuo account sarà cancellato e tutti i contenuti eliminati.</item>
+    <item quantity="other">Se esaurisci i tentativi il tuo account verrà bloccato per %1$d giorni. Dopo %1$d giorni di inattività, potrai registrarti nuovamente senza il tuo PIN. Il tuo account sarà cancellato e tutti i contenuti eliminati.</item>
+  </plurals>
+  <plurals name="RegistrationLockFragment__you_have_d_attempts_remaining">
+    <item quantity="one">Hai %1$d tentativo rimanente.</item>
+    <item quantity="other">Hai %1$d tentativi rimanenti.</item>
+  </plurals>
+  <plurals name="RegistrationLockFragment__d_attempts_remaining">
+    <item quantity="one">%1$d tentativo rimanente.</item>
+    <item quantity="other">%1$d tentativi rimanenti.</item>
+  </plurals>
   <!--KBS Megaphone-->
   <string name="KbsMegaphone__create_a_pin">Crea un PIN</string>
   <string name="KbsMegaphone__pins_add_another_layer_of_security_to_your_signal_account">I PIN aggiungono un altro livello di sicurezza al tuo account Signal.</string>
@@ -1473,6 +1517,8 @@
   <string name="KbsMegaphone__introducing_pins">Ti presentiamo i PIN</string>
   <string name="KbsMegaphone__your_registration_lock_is_now_called_a_pin">Il tuo blocco registrazione ora è chiamato PIN. Aggiornarlo richiede pochi secondi.</string>
   <string name="KbsMegaphone__update_pin">Aggiorna PIN</string>
+  <string name="KbsMegaphone__well_remind_you_later_creating_a_pin">Te lo ricorderemo più tardi. Creare un PIN diventerà obbligatorio tra %1$d giorni.</string>
+  <string name="KbsMegaphone__well_remind_you_later_confirming_your_pin">Te lo ricorderemo più tardi. Confermare il tuo PIN diventerà obbligatorio tra %1$d giorni.</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Icona trasporto</string>
   <string name="ConversationListFragment_loading">Caricamento…</string>
@@ -1497,6 +1543,8 @@
   <string name="preferences_chats__chat_backups">Backup delle chat</string>
   <string name="preferences_chats__backup_chats_to_external_storage">Backup delle chat sulla memoria esterna</string>
   <string name="preferences_chats__create_backup">Crea backup</string>
+  <string name="preferences_chats__verify_backup_passphrase">Verifica la passphrase del backup</string>
+  <string name="preferences_chats__test_your_backup_passphrase_and_verify_that_it_matches">Testa la passphrase del tuo backup e verifica che corrisponda</string>
   <string name="RegistrationActivity_enter_backup_passphrase">Inserire passphrase del backup</string>
   <string name="RegistrationActivity_restore">Ripristina</string>
   <string name="RegistrationActivity_backup_failure_downgrade">Impossibile importare backup da versioni più recenti di Signal</string>
@@ -1514,7 +1562,10 @@
   <string name="BackupDialog_disable_and_delete_all_local_backups">Disabilitare e cancellare tutti i backup locali?</string>
   <string name="BackupDialog_delete_backups_statement">Cancellare i backup</string>
   <string name="BackupDialog_copied_to_clipboard">Aggiunto agli appunti</string>
+  <string name="BackupDialog_enter_backup_passphrase_to_verify">Inserisci la passphrase del tuo backup per verificarla</string>
   <string name="BackupDialog_verify">Verifica</string>
+  <string name="BackupDialog_you_successfully_entered_your_backup_passphrase">Hai inserito correttamente la passphrase del tuo backup</string>
+  <string name="BackupDialog_passphrase_was_not_correct">La passphrase non è corretta</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal richiede l\'autorizzazione per creare backup in memoria, ma è stata negata in modo permanente. Si prega di continuare con le impostazioni dell\'app, selezionare \"Autorizzazioni\", quindi abilitare \"Archiviazione\".</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Ultimo backup: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">In corso</string>
@@ -1549,6 +1600,7 @@
   <string name="preferences_app_protection__registration_lock_pin">PIN di blocco della registrazione</string>
   <string name="preferences_app_protection__registration_lock">Blocco registrazione</string>
   <string name="RegistrationActivity_you_must_enter_your_registration_lock_PIN">Devi inserire il tuo PIN di blocco registrazione</string>
+  <string name="RegistrationActivity_your_pin_has_at_least_d_digits_or_characters">Il tuo PIN ha almeno %d cifre o caratteri</string>
   <string name="RegistrationActivity_incorrect_registration_lock_pin">PIN errato</string>
   <string name="RegistrationActivity_too_many_attempts">Troppi tentativi</string>
   <string name="RegistrationActivity_you_have_made_too_many_incorrect_registration_lock_pin_attempts_please_try_again_in_a_day">Hai sbagliato il PIN di blocco registrazione troppe volte. Per favore riprova tra un giorno.</string>
