--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -40,6 +40,7 @@
   <string name="ApplicationPreferencesActivity_Off">オフ</string>
   <string name="ApplicationPreferencesActivity_sms_mms_summary">SMS %1$s, MMS %2$s</string>
   <string name="ApplicationPreferencesActivity_privacy_summary">画面ロック %1$s, 登録ロック %2$s</string>
+  <string name="ApplicationPreferencesActivity_privacy_summary_screen_lock">画面ロック %1$s</string>
   <string name="ApplicationPreferencesActivity_appearance_summary">テーマ %1$s, 言語 %2$s</string>
   <!--AppProtectionPreferenceFragment-->
   <plurals name="AppProtectionPreferenceFragment_minutes">
@@ -57,6 +58,8 @@
   <string name="AttachmentKeyboard_file">ファイル</string>
   <string name="AttachmentKeyboard_contact">連絡先</string>
   <string name="AttachmentKeyboard_location">場所</string>
+  <string name="AttachmentKeyboard_Signal_needs_permission_to_show_your_photos_and_videos">写真や動画を表示するには、Signalに許可が必要です。</string>
+  <string name="AttachmentKeyboard_give_access">アクセスを許可する</string>
   <!--AttachmentManager-->
   <string name="AttachmentManager_cant_open_media_selection">ファイルを開くアプリが見つかりません。</string>
   <string name="AttachmentManager_signal_requires_the_external_storage_permission_in_order_to_attach_photos_videos_or_audio">Signalに写真や動画、音声データを添付するには、ストレージへのアクセス許可が必要ですが、無効になっています。アプリ設定メニューの「アプリの権限」で「ストレージ」を有効にしてください。</string>
@@ -440,6 +443,7 @@
   <string name="MediaOverviewActivity_sent_by_you_to_s">あなたが %1$s に送信</string>
   <!--Megaphones-->
   <string name="Megaphones_introducing_reactions">リアクションの紹介</string>
+  <string name="Megaphones_tap_and_hold_any_message_to_quicky_share_how_you_feel">メッセージをアップアンドホールドして、手軽にリアクションできます。</string>
   <string name="Megaphones_remind_me_later">あとで通知</string>
   <!--NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal通話中</string>
@@ -544,7 +548,9 @@
   <string name="RatingManager_later">後で</string>
   <string name="RatingManager_whoops_the_play_store_app_does_not_appear_to_be_installed">おっと、Playストアアプリはこのデバイスにインストールされていないようです。</string>
   <!--ReactionsBottomSheetDialogFragment-->
+  <string name="ReactionsBottomSheetDialogFragment_all">すべて %1$d</string>
   <!--ReactionsConversationView-->
+  <string name="ReactionsConversationView_plus">+%1$d</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">この連絡先をブロックしますか？</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">この連絡先からメッセージや通話を受け取ることはなくなります。</string>
@@ -1091,7 +1097,7 @@
   <string name="AndroidManifest__log_submit">デバッグログを提出</string>
   <string name="AndroidManifest__media_preview">メディアのプレビュー</string>
   <string name="AndroidManifest__message_details">メッセージ詳細</string>
-  <string name="AndroidManifest__linked_devices">リンクされている端末</string>
+  <string name="AndroidManifest__linked_devices">リンク済み端末</string>
   <string name="AndroidManifest__invite_friends">友達にオススメ</string>
   <string name="AndroidManifest_archived_conversations">アーカイブ済みの会話</string>
   <string name="AndroidManifest_remove_photo">画像を消去</string>
@@ -1190,7 +1196,7 @@
   <string name="preferences__conversation_length_limit">会話の最大の長さ</string>
   <string name="preferences__trim_all_conversations_now">全会話で古いメッセージを削減</string>
   <string name="preferences__scan_through_all_conversations_and_enforce_conversation_length_limits">すべての会話で長さが制限値以下になるよう整理します</string>
-  <string name="preferences__linked_devices">リンクされている端末</string>
+  <string name="preferences__linked_devices">リンク済み端末</string>
   <string name="preferences__light_theme">ライト</string>
   <string name="preferences__dark_theme">ダーク</string>
   <string name="preferences__system_theme">システム</string>
@@ -1384,8 +1390,18 @@
   <string name="BaseKbsPinFragment__create_alphanumeric_pin">英数字のPINを作成</string>
   <string name="BaseKbsPinFragment__create_numeric_pin">数字のPINを作成</string>
   <!--CreateKbsPinFragment-->
+  <plurals name="CreateKbsPinFragment__pin_must_be_at_least_characters">
+    <item quantity="other">PINは%1$d文字以上にしてください</item>
+  </plurals>
+  <plurals name="CreateKbsPinFragment__pin_must_be_at_least_digits">
+    <item quantity="other">PINは%1$d桁以上の数字にしてください</item>
+  </plurals>
   <string name="CreateKbsPinFragment__create_a_new_pin">新しいPINを登録</string>
+  <plurals name="CreateKbsPinFragment__you_can_choose_a_new_pin_because_this_device_is_registered">
+    <item quantity="other">このデバイスを登録したため、新しいPINを選択できます。PINを忘れると、再登録まで%1$d日間待たなければならないことがあります。</item>
+  </plurals>
   <string name="CreateKbsPinFragment__create_your_pin">あなたのPINを作成</string>
+  <string name="CreateKbsPinFragment__pins_add_an_extra_layer_of_security">PINはアカウントのセキュリティを強化します。PINの回復はできませんので、しっかり覚えてください。</string>
   <!--ConfirmKbsPinFragment-->
   <string name="ConfirmKbsPinFragment__pins_dont_match">PINが一致しません。再度試してください。</string>
   <string name="ConfirmKbsPinFragment__confirm_your_pin">PINを確認してください。</string>
@@ -1393,9 +1409,12 @@
   <string name="ConfirmKbsPinFragment__your_pin_was_not_saved">PINは保存されませんでした。あとでPINの作成について改めて伺います。 </string>
   <string name="ConfirmKbsPinFragment__pin_created">PINを作成しました。</string>
   <string name="ConfirmKbsPinFragment__re_enter_pin">PINを再入力</string>
+  <string name="ConfirmKbsPinFragment__creating_pin">PINを作成しています…</string>
   <!--KbsSplashFragment-->
   <string name="KbsSplashFragment__introducing_pins">PINのご紹介</string>
+  <string name="KbsSplashFragment__pins_add_another_level_of_security_to_your_account">PINはアカウントのセキュリティを強化します。いますぐ作成しましょう。</string>
   <string name="KbsSplashFragment__learn_more">詳細を知る</string>
+  <string name="KbsSplashFragment__learn_more_link">https://support.signal.org/hc/articles/360007059792-Registration-Lock</string>
   <string name="KbsSplashFragment__registration_lock_equals_pin">登録ロック = PIN</string>
   <string name="KbsSplashFragment__your_registration_lock_is_now_called_a_pin">登録ロックは今後PINと呼ばれ、より多機能になります。いますぐアップデートしてください。</string>
   <string name="KbsSplashFragment__read_more_about_pins">PINの詳細について</string>
@@ -1413,6 +1432,7 @@
   <string name="AccountLockedFragment__your_account_has_been_locked_to_protect_your_privacy">プライバシーとセキュリティ保護のため、あなたのアカウントをロックしました。%1$d日間の休止後に、PINなしでこの電話番号を再登録できるようになります。メッセージ等はすべて消去されます。</string>
   <string name="AccountLockedFragment__next">次へ</string>
   <string name="AccountLockedFragment__learn_more">詳細を知る</string>
+  <string name="AccountLockedFragment__learn_more_url">https://support.signal.org/hc/articles/360007059792-Registration-Lock</string>
   <!--KbsLockFragment-->
   <string name="RegistrationLockFragment__enter_your_pin">PINを入力</string>
   <string name="RegistrationLockFragment__enter_the_pin_you_created">あなたのアカウント用に作成したPINを入力してください。これはSMSの認証コードとは違います。</string>
@@ -1423,6 +1443,22 @@
   <string name="RegistrationLockFragment__forgot_pin">PINを忘れましたか？</string>
   <string name="RegistrationLockFragment__incorrect_pin">PINが違います</string>
   <string name="RegistrationLockFragment__forgot_your_pin">PINを忘れましたか？</string>
+  <string name="RegistrationLockFragment__not_many_tries_left">試行回数が残りわずかです！</string>
+  <plurals name="RegistrationLockFragment__for_your_privacy_and_security_there_is_no_way_to_recover">
+    <item quantity="other">プライバシーとセキュリティ保護のため、PINを回復する方法はありません。PINを思い出せない場合、%1$d日間の休止後にSMSで再認証できます。その場合アカウントはリセットされ、メッセージ等もすべて削除されます。</item>
+  </plurals>
+  <plurals name="RegistrationLockFragment__incorrect_pin_d_attempts_remaining">
+    <item quantity="other">PINが違います。あと%1$d回試せます。</item>
+  </plurals>
+  <plurals name="RegistrationLockFragment__if_you_run_out_of_attempts_your_account_will_be_locked_for_d_days">
+    <item quantity="other">試行回数の上限を超えるとアカウントが%1$d日間ロックされます。%1$d日間の休止後にPINなしで再登録できますが、アカウントはリセットされ、メッセージ等もすべて削除されます。</item>
+  </plurals>
+  <plurals name="RegistrationLockFragment__you_have_d_attempts_remaining">
+    <item quantity="other">あと%1$d回試せます。</item>
+  </plurals>
+  <plurals name="RegistrationLockFragment__d_attempts_remaining">
+    <item quantity="other">あと%1$d回試せます。</item>
+  </plurals>
   <!--KBS Megaphone-->
   <string name="KbsMegaphone__create_a_pin">PINを作成</string>
   <string name="KbsMegaphone__pins_add_another_layer_of_security_to_your_signal_account">PINはSignalアカウントのセキュリティを強化します。</string>
@@ -1430,6 +1466,8 @@
   <string name="KbsMegaphone__introducing_pins">PINのご紹介</string>
   <string name="KbsMegaphone__your_registration_lock_is_now_called_a_pin">登録ロックは今後PINと呼ばれます。アップデートは数秒で終わります。</string>
   <string name="KbsMegaphone__update_pin">PINをアップデート</string>
+  <string name="KbsMegaphone__well_remind_you_later_creating_a_pin">あとで再度お知らせします。PINの作成は%1$d日後に必須になります。</string>
+  <string name="KbsMegaphone__well_remind_you_later_confirming_your_pin">あとで再度お知らせします。PINの確認は%1$d日後に必須になります。</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">転送アイコン</string>
   <string name="ConversationListFragment_loading">読み込んでいます…</string>
@@ -1454,6 +1492,8 @@
   <string name="preferences_chats__chat_backups">チャットのバックアップ</string>
   <string name="preferences_chats__backup_chats_to_external_storage">外部ストレージにチャットをバックアップします</string>
   <string name="preferences_chats__create_backup">バックアップの作成</string>
+  <string name="preferences_chats__verify_backup_passphrase">バックアップ用パスフレーズの確認</string>
+  <string name="preferences_chats__test_your_backup_passphrase_and_verify_that_it_matches">バックアップ用パスフレーズが合っているか確認します</string>
   <string name="RegistrationActivity_enter_backup_passphrase">バックアップ用パスフレーズを入力してください</string>
   <string name="RegistrationActivity_restore">復元する</string>
   <string name="RegistrationActivity_backup_failure_downgrade">より新しいバージョンのSignalからはバックアップをインポートできません</string>
@@ -1471,7 +1511,10 @@
   <string name="BackupDialog_disable_and_delete_all_local_backups">すべてのローカルバックアップを削除して無効にしますか？</string>
   <string name="BackupDialog_delete_backups_statement">バックアップを削除します</string>
   <string name="BackupDialog_copied_to_clipboard">クリップボードにコピーしました</string>
+  <string name="BackupDialog_enter_backup_passphrase_to_verify">確認するバックアップ用パスフレーズを入力してください</string>
   <string name="BackupDialog_verify">確認する</string>
+  <string name="BackupDialog_you_successfully_entered_your_backup_passphrase">正しいバックアップ用パスフレーズが入力されました</string>
+  <string name="BackupDialog_passphrase_was_not_correct">パスフレーズ が違います</string>
   <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signalでバックアップを作成するには、外部ストレージへのアクセス許可が必要ですが、無効になっています。アプリ設定メニューの「アプリの権限」で「ストレージ」を有効にしてください。</string>
   <string name="ChatsPreferenceFragment_last_backup_s">最終バックアップ: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">実行中</string>
@@ -1506,6 +1549,7 @@
   <string name="preferences_app_protection__registration_lock_pin">登録ロックPIN</string>
   <string name="preferences_app_protection__registration_lock">登録ロック</string>
   <string name="RegistrationActivity_you_must_enter_your_registration_lock_PIN">登録ロックPINの入力が必要です</string>
+  <string name="RegistrationActivity_your_pin_has_at_least_d_digits_or_characters">あなたのPINは%d字以上です</string>
   <string name="RegistrationActivity_incorrect_registration_lock_pin">登録ロックPINが違います</string>
   <string name="RegistrationActivity_too_many_attempts">試行が多すぎます</string>
   <string name="RegistrationActivity_you_have_made_too_many_incorrect_registration_lock_pin_attempts_please_try_again_in_a_day">登録ロックPINの間違いが多すぎます。1日後に再度試してください。</string>
